--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Wasson_ECE\\Partly\\": "src"
+        }
+    }
 }
