--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "wasson-ece/php-enum":"v0.1.0"
+        "wasson-ece/php-enum":"1.0.1"
     },
     "require-dev": {
-        "wasson-ece/php-enum":"v0.1.0"
     },
     "autoload": {
         "psr-4": {
